[package]
name = "add-one-konwrz20"
version = "0.1.0"
authors = ["konwrz20 <konwrz20@github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "First pushed crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.3.14"
