[package]
name = "adder"
version = "0.1.0"
authors = ["konwrz20 <konwrz20@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

add-one-konwrz20 = { path = "../add-one-konwrz20" }
add-two = { path = "../add-two" }
rand = "0.7.0"
